fixed horizontal scroll

--- a/styles/tm.css
+++ b/styles/tm.css
@@ -314,6 +314,7 @@ body {
 .menu .center {
   position: absolute;
   width: 100%;
+  left: 0;
   text-align: center;
 }
 
